--- a/Resources/Maps/_CP14/comoss_d.yml
+++ b/Resources/Maps/_CP14/comoss_d.yml
@@ -4,7 +4,7 @@ meta:
   engineVersion: 247.0.0
   forkId: ""
   forkVersion: ""
-  time: 02/22/2025 14:14:48
+  time: 02/23/2025 16:53:15
   entityCount: 23551
 maps:
 - 1
@@ -45,7 +45,7 @@ entities:
       name: Map Entity
     - type: Transform
     - type: Map
-      mapPaused: False
+      mapPaused: True
     - type: PhysicsMap
     - type: GridTree
     - type: MovedGrids
@@ -644,7 +644,7 @@ entities:
           0,4:
             0: 65535
           1,0:
-            0: 30583
+            0: 65535
           1,1:
             0: 65535
           1,2:
@@ -652,31 +652,33 @@ entities:
           1,3:
             0: 56607
           1,-1:
-            0: 32767
+            0: 65535
           1,4:
             0: 61917
           2,0:
-            0: 1911
+            0: 60943
           2,1:
-            0: 65535
+            0: 65294
           2,2:
             0: 65535
           2,3:
             0: 48015
+          2,-1:
+            0: 65535
           2,4:
             0: 63675
           3,0:
-            0: 65535
+            0: 56783
           3,1:
-            0: 65535
+            0: 65485
           3,2:
             0: 65535
           3,3:
             0: 65535
+          3,-1:
+            0: 65535
           3,4:
             0: 65535
-          3,-1:
-            0: 35771
           4,0:
             0: 65535
           4,1:
@@ -686,49 +688,45 @@ entities:
           4,3:
             0: 65535
           0,-4:
-            0: 65535
+            0: 22391
           0,-5:
-            0: 65535
+            0: 32755
           -1,-4:
-            0: 65535
+            0: 57343
           0,-3:
-            0: 30591
+            0: 4915
           -1,-3:
-            0: 65535
+            0: 52975
           0,-2:
-            0: 65399
+            0: 65392
           -1,-2:
-            0: 65535
+            0: 65520
           -1,-1:
             0: 65535
-          1,-4:
-            0: 65535
           1,-3:
-            0: 30479
+            0: 30472
           1,-2:
             0: 65287
+          1,-4:
+            0: 60928
           1,-5:
-            0: 65535
+            0: 28396
           2,-4:
-            0: 65535
+            0: 65296
           2,-3:
             0: 65535
           2,-2:
-            0: 16383
-          2,-1:
-            0: 3003
-          2,-5:
             0: 65535
-          3,-4:
-            0: 61917
+          2,-5:
+            0: 53233
           3,-3:
             0: 65535
           3,-2:
-            0: 36863
+            0: 65535
+          3,-4:
+            0: 204
           3,-5:
-            0: 40401
-          4,-4:
-            0: 61542
+            0: 52688
           4,-3:
             0: 65535
           4,-2:
@@ -736,17 +734,19 @@ entities:
           4,-1:
             0: 65535
           -4,-4:
-            0: 65535
+            0: 25123
           -4,-5:
-            0: 65535
+            0: 13107
           -5,-4:
-            0: 30479
+            0: 65295
           -4,-3:
-            0: 30583
+            0: 26214
+          -5,-3:
+            0: 65535
           -4,-2:
-            0: 62387
+            0: 62370
           -5,-2:
-            0: 65287
+            0: 65295
           -4,-1:
             0: 46079
           -5,-1:
@@ -754,7 +754,7 @@ entities:
           -4,0:
             0: 15291
           -3,-4:
-            0: 65535
+            0: 103
           -3,-3:
             0: 30576
           -3,-2:
@@ -762,13 +762,13 @@ entities:
           -3,-1:
             0: 28927
           -3,-5:
-            0: 65535
+            0: 30719
           -3,0:
             0: 1911
           -2,-4:
-            0: 65535
+            0: 60671
           -2,-3:
-            0: 28927
+            0: 28680
           -2,-2:
             0: 61559
           -2,-1:
@@ -857,8 +857,6 @@ entities:
             0: 65535
           -6,0:
             0: 65535
-          -5,-3:
-            0: 30583
           -5,-5:
             0: 65535
           -9,0:
@@ -1052,13 +1050,13 @@ entities:
           -4,-7:
             0: 65535
           -4,-6:
-            0: 65535
+            0: 13311
           -4,-9:
             0: 8191
           -3,-7:
             0: 65535
           -3,-6:
-            0: 65535
+            0: 255
           -3,-8:
             0: 61166
           -3,-9:
@@ -1068,7 +1066,7 @@ entities:
           -2,-7:
             0: 65535
           -2,-6:
-            0: 65535
+            0: 49167
           -2,-9:
             0: 65287
           -1,-8:
@@ -1076,7 +1074,7 @@ entities:
           -1,-7:
             0: 65535
           -1,-6:
-            0: 65535
+            0: 61455
           -1,-9:
             0: 65535
           0,-8:
@@ -1084,7 +1082,7 @@ entities:
           0,-7:
             0: 65535
           0,-6:
-            0: 65535
+            0: 4239
           0,-9:
             0: 65535
           1,-8:
@@ -1092,7 +1090,7 @@ entities:
           1,-7:
             0: 65535
           1,-6:
-            0: 65535
+            0: 255
           1,-9:
             0: 15283
           2,-8:
@@ -1100,13 +1098,13 @@ entities:
           2,-7:
             0: 65535
           2,-6:
-            0: 65535
+            0: 3327
           3,-8:
             0: 65535
           3,-7:
             0: 65535
           3,-6:
-            0: 65535
+            0: 4095
           3,-9:
             0: 65535
           4,-8:
@@ -1114,9 +1112,9 @@ entities:
           4,-7:
             0: 65535
           4,-6:
-            0: 65535
+            0: 4095
           4,-5:
-            0: 12272
+            0: 28656
           -9,8:
             0: 65535
           -8,9:
@@ -1228,7 +1226,7 @@ entities:
           4,11:
             0: 65433
           5,4:
-            0: 14809
+            0: 61917
           5,5:
             0: 65535
           5,6:
@@ -1236,21 +1234,21 @@ entities:
           5,7:
             0: 65535
           5,3:
-            0: 16383
+            0: 53759
           5,8:
             0: 65535
           6,4:
-            0: 35771
+            0: 63675
           6,5:
             0: 65535
           6,6:
             0: 65535
           6,7:
             0: 65535
+          6,3:
+            0: 47359
           6,8:
             0: 65535
-          6,3:
-            0: 36863
           7,4:
             0: 65535
           7,5:
@@ -1386,16 +1384,15 @@ entities:
           12,11:
             0: 65535
           5,0:
-            0: 65305
-            1: 4
+            0: 61678
           5,1:
             0: 65535
           5,2:
             0: 65535
           5,-1:
-            0: 53759
+            0: 57599
           6,0:
-            0: 65485
+            0: 64733
           6,1:
             0: 65535
           6,2:
@@ -1416,14 +1413,16 @@ entities:
             0: 65535
           8,2:
             0: 65535
-          5,-4:
-            0: 65535
+          4,-4:
+            0: 102
           5,-3:
             0: 65535
           5,-2:
             0: 65535
+          5,-4:
+            0: 61164
           5,-5:
-            0: 61166
+            0: 52428
           6,-4:
             0: 15283
           6,-3:
@@ -1521,7 +1520,7 @@ entities:
           5,-7:
             0: 65535
           5,-6:
-            0: 65535
+            0: 53247
           5,-9:
             0: 65535
           6,-8:
@@ -2561,8 +2560,7 @@ entities:
           21,5:
             0: 61439
           21,7:
-            0: 307
-            1: 512
+            0: 819
           21,3:
             0: 65535
           21,6:
@@ -3292,11 +3290,11 @@ entities:
           -13,-21:
             0: 65535
           -19,-19:
-            0: 34816
+            0: 2048
           -18,-19:
             0: 65516
           -18,-18:
-            0: 239
+            0: 238
           -18,-20:
             0: 32768
           -17,-21:
@@ -3439,21 +3437,6 @@ entities:
           moles:
           - 21.824879
           - 82.10312
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.14975
-          moles:
-          - 20.078888
-          - 75.53487
           - 0
           - 0
           - 0
